# FastFormat

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/example.ff_101/: CMakeLists.txt
examples/example.memory.1/: CMakeLists.txt
examples/example.overload.2.custom_type.string_access_shims/: CMakeLists.txt
examples/example.overload.3.record_insert/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
